Added Mint site with base dog

--- a/src/doggiestyles.css
+++ b/src/doggiestyles.css
@@ -1,16 +1,6 @@
-html,
-body {
-  background: #D8BFD8;
-  height: 100%;
-  width: 100%;
-}
-
 .dog {
   width: 120px;
   position: relative;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
 }
 
 .body {
@@ -235,10 +225,10 @@ body {
 }
 
 .ears {
-  position: absolute;
-  z-index: -1;
-  top: -20px;
+  position: relative;
+  top: 65px;
 }
+
 .ears:after, .ears:before {
   content: "";
   display: inline-block;
