--- a/src/doggiestyles.css
+++ b/src/doggiestyles.css
@@ -233,12 +233,9 @@
   transform: translateX(-13px);
 }
 
-.ears {
+.leftear {
   position: relative;
   top: 70px;
-}
-
-.ears:after, .ears:before {
   content: "";
   display: inline-block;
   background: #994C00;
@@ -246,7 +243,16 @@
   height: 90px;
   border-radius: 100% 100% 0 0;
 }
-.ears:after {
+
+.rightear {
+  position: relative;
+  top: 70px;
+  content: "";
+  display: inline-block;
+  background: #994C00;
+  width: 40px;
+  height: 90px;
+  border-radius: 100% 100% 0 0;
   transform: translateX(40px);
   border: 10px solid #CC6600;
   box-sizing: border-box;
