--- a/src/doggiestyles.css
+++ b/src/doggiestyles.css
@@ -184,6 +184,7 @@
 }
 
 .upperrightleg {
+  z-index: 1;
   width: 12px;
   height: 55px;
   background: #994C00;
@@ -204,6 +205,7 @@
 }
 
 .backrightleg {
+  z-index: 1;
   height: 12px;
   border-radius: 20px 20px 0 0;
   display: inline-block;
@@ -226,6 +228,7 @@
 }
 
 .frontrightleg {
+  z-index: 1;
   content: "";
   width: 28px;
   height: 12px;
